<resources>
    <string name="sobot_demo_app_name">智齿_Mall_demo</string>
    <string name="sobot_demo_please">SOBOT SDK  2.4.0</string>
    <string name="sobot_demo_person_set_value">用户基本资料(选填)</string>
    <string name="sobot_demo_start_set_value">启动参数设置(AppKey为必填)</string>
    <string name="sobot_demo_product_set_value">咨询信息设置(选填)</string>
    <string name="sobot_demo_starting_value">启动SDK</string>
    <string name="sobot_start_message_center">启动消息中心</string>
    <string name="sobot_clear_message_center">清除消息中心</string>
</resources>