<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:background="@drawable/sobot_demo_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/sobot_demo_please"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sobot_demo_person_set"
            style="@style/sobot_demo_btn_style"
            android:layout_marginTop="40dp"
            android:text="@string/sobot_demo_person_set_value" />

        <Button
            android:id="@+id/sobot_demo_product_set"
            style="@style/sobot_demo_btn_style"
            android:text="@string/sobot_demo_product_set_value" />

        <Button
            android:id="@+id/sobot_demo_start_set"
            style="@style/sobot_demo_btn_style"
            android:text="@string/sobot_demo_start_set_value" />

        <Button
            android:id="@+id/sobot_demo_starting"
            style="@style/sobot_demo_btn_style"
            android:stateListAnimator="@null"
            android:text="@string/sobot_demo_starting_value" />

        <Button
            android:id="@+id/sobot_message_center"
            style="@style/sobot_demo_btn_style"
            android:stateListAnimator="@null"
            android:text="@string/sobot_start_message_center" />

        <Button
            android:id="@+id/sobot_clear_message_center"
            style="@style/sobot_demo_btn_style"
            android:stateListAnimator="@null"
            android:text="@string/sobot_clear_message_center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/sobot_btn_open_leave_msg"
                style="@style/sobot_demo_button_style"
                android:text="开启离线消息" />

            <Button
                android:id="@+id/sobot_btn_close_conn"
                style="@style/sobot_demo_button_style"
                android:text="断开连接" />

            <Button
                android:id="@+id/sobot_btn_exit_service"
                style="@style/sobot_demo_button_style"
                android:text="退出客服" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>